--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <!--Add your title here-->
-    <title>Text Me - Powered by SuperPhone®</title>
+    <title>Text Joyce - Powered by SuperPhone®</title>
     
     <!--This code makes the website responsive-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -195,8 +195,8 @@
     <div class="page-center">
     <div class="custom-form">
         <div class="container">
-            <h1 class="text-center" style="font-weight: bold">Hey, it's Joyce Ormeo!</h1>
-            <p class="text-center" style="font-size: 21px">PLEASE ENTER YOUR PHONE NUMBER<br>AND I WILL TEXT YOU RIGHT BACK:</p>
+            <h1 class="text-center" style="font-weight: bold">Hey, it's Joyce Ormeo 😊</h1>
+            <p class="text-center" style="font-size: 21px">STAY IN TOUCH WITH ME <br>LEAVE YOUR NUMBER BELOW ⬇</p>
             <form id="addContact" class="form-horizontal" style="min-width: 100%" method="POST" action="#" autocomplete="false" data-parsley-validate>
                 <div class="form-group">
                     <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 col-lg-4 col-lg-offset-4">
