--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     
     <!--This is the text for the success page-->
     <div class="form-success">
-            <h1>Just texted you - please check your messages.</h1>
+            <h1>I just texted you! 🎉</h1>
     </div>
     </div>
 </body>
