--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <div class="custom-form">
         <div class="container">
             <h1 class="text-center" style="font-weight: bold">Hey, it's Joyce Ormeo 😊</h1>
-            <p class="text-center" style="font-size: 21px">STAY IN TOUCH WITH ME <br>LEAVE YOUR NUMBER BELOW ⬇</p>
+            <p class="text-center" style="font-size: 21px">LET'S STAY IN TOUCH!<br>LEAVE YOUR NUMBER BELOW ⬇</p>
             <form id="addContact" class="form-horizontal" style="min-width: 100%" method="POST" action="#" autocomplete="false" data-parsley-validate>
                 <div class="form-group">
                     <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-10 col-xs-offset-1 col-lg-4 col-lg-offset-4">
