--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <div class="page-center">
     <div class="custom-form">
         <div class="container">
-            <h1 class="text-center" style="font-weight: bold">Hey, it's Joyce Ormeo 😊</h1>
+            <h1 class="text-center" style="font-weight: bold">New Lobby Contact</h1>
             <p class="text-center" style="font-size: 21px">LET'S STAY IN TOUCH!<br>LEAVE YOUR NUMBER BELOW ⬇</p>
             <form id="addContact" class="form-horizontal" style="min-width: 100%" method="POST" action="#" autocomplete="false" data-parsley-validate>
                 <div class="form-group">
